add batch size to avoid timeout

--- a/action.yml
+++ b/action.yml
@@ -66,6 +66,10 @@ inputs:
     description: "Custom PR title (default: 'Add LLM Translations')"
     required: false
     default: "Add LLM Translations"
+  batch_size:
+    description: "Number of files to process in each batch for large translation jobs (creates separate PRs)"
+    required: false
+    default: "20"
   github_token:
     description: "GitHub token for PR creation"
     required: false
@@ -90,4 +94,5 @@ runs:
     REFINE_TEMPERATURE: ${{ inputs.refine_temperature }}
     BASE_BRANCH: ${{ inputs.base_branch }}
     PR_TITLE: ${{ inputs.pr_title }}
+    BATCH_SIZE: ${{ inputs.batch_size }}
     GITHUB_TOKEN: ${{ inputs.github_token }}
