--- a/action.yml
+++ b/action.yml
@@ -91,4 +91,5 @@ runs:
     REFINE_TEMPERATURE: ${{ inputs.refine_temperature }}
     BASE_BRANCH: ${{ inputs.base_branch }}
     PR_TITLE: ${{ inputs.pr_title }}
+    PYTHONUNBUFFERED: "1"
     GITHUB_TOKEN: ${{ inputs.github_token }}
