--- a/action.yml
+++ b/action.yml
@@ -39,7 +39,7 @@ inputs:
   refine_enabled:
     description: "Enable second AI model for refinement after translation"
     required: false
-    default: "false"
+    default: "true"
   refine_ai_model:
     description: "AI model for refinement (uses the same service as primary translation but with a different model)"
     required: false
